First working TestFx test & other changes
+ Divide dependencies in `pom.xml` using comments
+ Separate `ApplicationContext` away from `ClinicApplication` class
+ Add and use dependency injection library (Guice) for accessing the application context
+ Add Mockito library for easier mocking in future